--- a/src/app/post-view/post/post-comment/add-comment/add-comment.component.scss
+++ b/src/app/post-view/post/post-comment/add-comment/add-comment.component.scss
@@ -11,12 +11,12 @@
         background-color: black;
         border-radius: 0.25rem;
     }
-    .no-padding-right {
-        padding-right: 0px;
-    }
-    .no-padding-left {
-        padding-left: 0px;
-    }
+    // .no-padding-right {
+    //     padding-right: 0px;
+    // }
+    // .no-padding-left {
+    //     padding-left: 0px;
+    // }
     button{
         margin-top: 10px;
         font-size: 17px;
