--- a/src/app/post-view/post/post-comment/comment-item/comment-item.component.scss
+++ b/src/app/post-view/post/post-comment/comment-item/comment-item.component.scss
@@ -12,12 +12,12 @@
             color: blue;
         }
     }
-    .no-padding-right {
-        padding-right: 0px;
-    }
-    .no-padding-left {
-        padding-left: 0px;
-    }
+    // .no-padding-right {
+    //     padding-right: 0px;
+    // }
+    // .no-padding-left {
+    //     padding-left: 0px;
+    // }
     .comp {
         padding-bottom: 15px;
     }
