--- a/src/app/post-view/post/post.component.scss
+++ b/src/app/post-view/post/post.component.scss
@@ -1,4 +1,8 @@
 :host {
+    display: inline-block;
+    border: none;
+    padding: 0px;
+    height: 100%;
     .title {
         font-weight: bolder;
         font-size: 34px;
@@ -14,38 +18,40 @@
         color: black;
         font-weight: bold;
     }
-    .container {
-        margin: 0px;
+    .comp {
         background-color: #e1e1ef;
-        height: 90vh;
+        height: 100%;
     }
-    .content {
-        margin: 10px;
-        background-color: #fff;
-        border-radius: 1rem;
-        max-height: 89vh;
+    .hidden-scroll {
+        height: 100%;
         overflow-y: scroll;
         overflow-x: hidden;
     }
-    .content::-webkit-scrollbar {
-        // width: 0px;
-        // background: transparent;
-        /* make scrollbar transparent */
-        display: none;
+    .max-height {
+        // co thi ko bi tran, ko hieu tai sao
+        // so px ko quan trong
+        max-height: 100px;
     }
-    .row {
-        padding: 5px;
+    .content {
+        background-color: #fff;
+        border-radius: 5px;
+    }
+    .hidden-scroll::-webkit-scrollbar {
+        width: 0px;
+        background: transparent;
+        display: none;
     }
     .tag {
         font-size: 14px;
         font-weight: bold;
-        margin-top: 10px;
-        margin-right: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         padding: 10px;
-        border-color: transparent;
         border-radius: 2rem;
+        display: inline-block;
     }
     .tag-item {
+        margin-right: 10px;
         background-color: whitesmoke;
         cursor: pointer;
     }
